--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,27 @@
     <artifactId>jcomponents</artifactId>
     <version>2.0.0</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <!-- The final name for the JAR that you can find in target directory-->
         <jar.final.name>jcomponents</jar.final.name>
